--- a/package.json
+++ b/package.json
@@ -11,21 +11,27 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.8",
     "@mui/styled-engine-sc": "^5.11.0",
+    "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.37.0",
     "axios": "^1.3.2",
-    "pretty-print-object": "^1.1.0",
+    "i": "^0.3.7",
+    "mui-image": "^1.0.7",
+    "npm": "^9.4.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-element-to-jsx-string": "^15.0.0",
     "react-number-format": "^5.1.3",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "react-tomato-talk": "^1.6.13",
+    "redux": "^4.2.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
